minor update to config

--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,4 +1,4 @@
-<hgroup style='background-image: url("http://4.bp.blogspot.com/-yFUNzKF1RUM/UFtfPr9Q6jI/AAAAAAAAHPk/cCrGt-zFoPs/s910/GC_4096sq_bolo.png")'>
+<hgroup>
   <h1><a href="{{ root_url }}/">{{ site.title }}</a></h1>
   {% if site.subtitle %}
     <h2>{{ site.subtitle }}</h2>
