--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -2,4 +2,5 @@
   <li><a href="{{ root_url }}/">Blog</a></li>
   <li><a href="{{ root_url }}/bgps/">BGPS</a></li>
   <li><a href="{{ root_url }}/publications/">Research</a></li>
+  <li><a href="{{ root_url }}/archives/">Archives</a></li>
 </ul>
